<resources>
    <string name="app_name">YadNegar</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome to memoreminder</string>
    <string name="top_memories">Top Memories</string>
    <string name="your_memories">Your Memories</string>
    <string name="or">or</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="birthday_optional">Birthday (Optional)</string>
    <string name="create_account">Create Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="field_is_required">Field Is Required</string>
    <string name="passwords_do_not_match">Passwords Do Not Match</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="memories_feed">Memories Feed</string>
    <string name="setting">Settings</string>
    <string name="logout">Log Out</string>
    <string name="profile">Profile</string>
    <string name="edit">Edit</string>
    <string name="memories">Memories</string>
    <string name="likes">Likes</string>
    <string name="comments">Comments</string>
    <string name="name">Name</string>
    <string name="birthday">Birthday</string>
    <string name="submit">Submit</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="delete">Delete</string>
    <string name="memory">Memory</string>
    <string name="alert">Alert</string>
    <string name="delete_message">Are you sure you want to delete this memory?
        \nThis action cannot be undone</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="this_field_is_required">This field is required</string>
    <string name="login_failed">Login failed</string>
    <string name="surname">Surname</string>
    <string name="connection_error">Connection Error</string>
    <string name="write_a_comment">Write a Comment…</string>
    <string name="done">Done</string>
    <string name="add_memory">Add Memory</string>
    <string name="edit_memory">Edit Memory</string>
    <string name="select_tags">Select Tags</string>
    <string name="next">Next</string>
    <string name="title">title</string>
    <string name="text">text</string>
    <string name="label">label</string>
    <string name="add">add</string>
    <string name="tags">Tags</string>
    <string name="status">Status:</string>
    <string name="accept">accept</string>
    <string name="reject">reject</string>
    <string name="send_friend_request">Send Friend Request</string>
    <string name="follow">Follow</string>
    <string name="tick_image">Tick Image</string>
    <string name="search">Search</string>
    <string name="search_button">Search Button</string>
    <string name="files">Files</string>
    <string name="tagged_people">Tagged People</string>
    <string name="add_user">Add User</string>
    <string name="add_file">Add file</string>
    <string name="caption">Caption</string>
    <string name="friends">Friends</string>
    <string name="requests">Requests</string>
    <string name="upload_file">Upload File</string>
</resources>