<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/grp1">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home" />
        <item
            android:id="@+id/memories"
            android:icon="@drawable/ic_baseline_memories_filled_24"
            android:title="@string/memories" />
        <item
            android:id="@+id/setting"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/setting" />
    </group>
    <group android:id="@+id/grp2">
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_baseline_logout_24"
            android:title="@string/logout" />
    </group>
</menu>